all 3 indexes